[package]
name = "raknet"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"

[dependencies.smallvec]
version = "1.8.0"
features = ["union", "const_generics"]

[dependencies.tokio]
version = "1.19.2"
features = ["rt", "net"]

[dev-dependencies.tokio]
version = "1.19.2"
features = ["macros"]
